<resources>
    <string name="app_name">Achieve Life</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_basic">basicActivity</string>
    <string name="title_activity_profile">profile</string>

    <string name="action_intelligence">Intelligence</string>
    <string name="action_fitness">Fitness</string>
    <string name="action_leaderBoard">Leader Board</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fitness">Map</string>
    <string name="action_activity_log">Activity Log</string>
    <string name="enter_minutes">Minutes!</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="reset_timer">Reset Timer</string>
    <string name="timer">00:00:00</string>
    <string name="action_profile">Profile</string>
    <string name="action_activity_description">Activity Description</string>
    <string name="app_id"> 576754695844951 </string>
    <string name="title_activity_facebook_login">FacebookLogin</string>
</resources>
