<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cse442.achievelife.Main_login">


    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:text="@string/action_intelligence"
            android:id="@+id/intelligenceButton"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:text="@string/action_fitness"
            android:id="@+id/fitnessButton"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:text="@string/action_leaderBoard"
            android:id="@+id/leaderBoardButton"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:text="@string/action_activity_log"
            android:id="@+id/activity_logButton"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:text="@string/action_profile"
            android:id="@+id/profileButton"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:text="@string/action_activity_description"
            android:id="@+id/activity_descriptionButton"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:text="@string/action_settings"
            android:id="@+id/settingsButton"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>